# rig-eth

./: .gitignore  Cargo.toml  README.md
configs/: chains.json
src/: agent_with_erc20.rs  chains.rs  erc20_transfer.rs  eth_transfer.rs  gen_tools.rs  main.rs  swap.rs
