[package]
name = "rig-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.6.0"
tokio = { version = "1.42.0", features = ["full"] }
alloy = { version = "0.8", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"  
